style: fix z-index

--- a/css/platform.css
+++ b/css/platform.css
@@ -340,6 +340,7 @@ label > #prompt-header {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 500;
     background-color: rgba(0, 0, 0, 0.1);
 }
 
@@ -347,6 +348,7 @@ label > #prompt-header {
     position: absolute;
     right: 1.5rem;
     bottom: 1.5rem;
+    z-index: 1000;
 
     aspect-ratio: 1/1;
     width: 35px;
